--- a/week-8/day-2/mysql/build.gradle
+++ b/week-8/day-2/mysql/build.gradle
@@ -30,4 +30,7 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile('org.webjars:jquery:2.1.1')
+	compile('org.webjars:bootstrap:3.2.0')
 }
+
